<resources>
    <string name="app_name">Remind Me</string>
    <string name="nav_log_out">Logout</string>
    <string name="user_full_name">John Doe</string>
    <string name="user_email">john.doe@gmail.com</string>
    <string name="remind_me_for">Remind me for:</string>
    <string name="date_to_remind">Date to remind</string>
    <string name="remind_input_hint">What do I need to remind you for?</string>
    <string name="task_title_hint">Task title</string>
    <string name="empty_input_field">Field can not be empty</string>
    <string name="remind_me_on_date">Remind me on date</string>
    <string name="date_pick_error_message_before">Date can not be before today</string>
    <string name="remind_me_on_time">Time</string>
    <string name="time">%d:%d</string>
    <string name="new_reminder_added">You have new reminder</string>
    <string name="notification_switch_label">Notify me 2 hours before deadline</string>
    <string name="priority_label">What is the priority for this reminder?</string>
    <string name="priority_low">Low</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="push_title">I am reminding you for</string>
    <string name="single_reminder_toolbar_title">Reminder</string>
    <string name="new_reminder_toolbar_title">New reminder</string>
    <string name="login_not_successful">Username or password are incorrect</string>
    <string name="delete_dialog_title">Are you done?</string>
    <string name="delete_dialog_message">You are about to delete reminder. Are you sure?</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_decline">No</string>
    <string name="reminder_is_updated">Your reminder is updated</string>
    <string name="assign_your_first_task">Assign your first task</string>
    <string name="deadline_error_message">I reminded you for this task</string>
</resources>
