<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_add_new_reminder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_new_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:elevation="@dimen/elevation_small">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="@dimen/padding_default">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_title_add_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/task_title_hint"
                android:maxLength="30"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_task_add_new_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/remind_input_hint"
                android:inputType="textMultiLine"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/text_default"
                app:layout_constraintTop_toBottomOf="@id/input_title_add_new" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_remind_me_on_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_action_dropdown"
                android:hint="@string/remind_me_on_date"
                android:paddingTop="@dimen/padding_large"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/text_default"
                app:layout_constraintTop_toBottomOf="@id/input_task_add_new_reminder" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_remind_me_on_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_action_dropdown"
                android:hint="@string/remind_me_on_time"
                android:paddingTop="@dimen/padding_large"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/text_default"
                app:layout_constraintTop_toBottomOf="@id/tv_remind_me_on_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_switch_push_notification_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_default"
                android:hint="@string/notification_switch_label"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/text_default"
                app:layout_constraintBottom_toBottomOf="@id/switch_push_notification_reminder"
                app:layout_constraintEnd_toStartOf="@id/switch_push_notification_reminder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/switch_push_notification_reminder" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_push_notification_reminder"
                style="@style/SwitchCompatTheme"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_remind_me_on_time" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_priority_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:hint="@string/priority_label"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/text_default"
                app:layout_constraintTop_toBottomOf="@id/tv_switch_push_notification_label" />


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                app:layout_constraintTop_toBottomOf="@id/tv_priority_label">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/cb_priority_low"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/priority_low_checkbox"
                    android:button="@null"
                    android:checked="true"
                    android:text="@string/priority_low"
                    android:textAlignment="center" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/cb_priority_medium"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_weight="1"
                    android:background="@drawable/priority_medium_checkbox"
                    android:button="@null"
                    android:text="@string/priority_medium"
                    android:textAlignment="center" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/cb_priority_high"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/priority_high_checkbox"
                    android:button="@null"
                    android:text="@string/priority_high"
                    android:textAlignment="center" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>